--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^16.18.13",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "mobx": "^6.13.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "styled-components": "^5.3.6",
